fdo#73541 "Page Margins : Mirrored" was not preserved on export to DOCX

Mapped Property at import, so Page margins mirrored are imported correctly.
Also exported the mirrorMargins in settings.xml
Added export UT for the same.

Conflicts:
	sw/qa/extras/ooxmlexport/ooxmlexport.cxx
Reviewed on:
	https://gerrit.libreoffice.org/7632

Change-Id: I2d90643f55e1dc1d96c809e28ce37dee4653bf57