writerfilter/source/dmapper/SettingsTable.cxx
@@ -72,6 +72,7 @@ struct SettingsTable_Impl
     bool                embedSystemFonts;
     bool                m_bDoNotUseHTMLParagraphAutoSpacing;
     bool                m_bSplitPgBreakAndParaMark;
+    bool                m_bMirrorMargin;
     uno::Sequence<beans::PropertyValue> m_pThemeFontLangProps;
 
     SettingsTable_Impl( DomainMapper& rDMapper, const uno::Reference< lang::XMultiServiceFactory > xTextFactory ) :
@@ -97,6 +98,7 @@ struct SettingsTable_Impl
     , embedSystemFonts(false)
     , m_bDoNotUseHTMLParagraphAutoSpacing(false)
     , m_bSplitPgBreakAndParaMark(false)
+    , m_bMirrorMargin(false)
     , m_pThemeFontLangProps(3)
     {}
 
@@ -233,6 +235,9 @@ void SettingsTable::lcl_sprm(Sprm& rSprm)
     case NS_ooxml::LN_CT_Compat_splitPgBreakAndParaMark:
         m_pImpl->m_bSplitPgBreakAndParaMark = nIntValue;
         break;
+    case NS_ooxml::LN_CT_Settings_mirrorMargins:
+        m_pImpl->m_bMirrorMargin = nIntValue;
+        break;
     default:
     {
 #ifdef DEBUG_DMAPPER_SETTINGS_TABLE
@@ -293,6 +298,11 @@ bool SettingsTable::GetDoNotUseHTMLParagraphAutoSpacing() const
 bool SettingsTable::GetSplitPgBreakAndParaMark() const
 {
     return m_pImpl->m_bSplitPgBreakAndParaMark;
+}
+
+bool SettingsTable::GetMirrorMarginSettings() const
+{
+    return m_pImpl->m_bMirrorMargin;
 }
 
 uno::Sequence<beans::PropertyValue> SettingsTable::GetThemeFontLangProperties() const
