sw/qa/extras/ooxmlexport/ooxmlexport.cxx
@@ -2985,6 +2985,16 @@ DECLARE_OOXMLEXPORT_TEST(testLineStyle_DashType_VML, "LineStyle_DashType_VML.doc
     assertXPath(pXmlDoc, "/w:document/w:body/w:p/w:r[2]/mc:AlternateContent/mc:Fallback/w:pict/v:rect/v:stroke", "dashstyle", "dash");
 }
 
+DECLARE_OOXMLEXPORT_TEST(testFdo73541,"fdo73541.docx")
+{
+    // fdo#73541: The mirrored margins were not imported and mapped correctly in Page Layout
+    // Hence <w:mirrorMargins /> tag was not exported back in settings.xml
+    xmlDocPtr pXmlDoc = parseExport("word/settings.xml");
+    if (!pXmlDoc)
+        return;
+    assertXPath(pXmlDoc, "/w:settings/w:mirrorMargins");
+}
+
 #endif
 
 CPPUNIT_PLUGIN_IMPLEMENT();
